@@ -244,6 +244,10 @@ HTML_XPATH = {
             'perl'),
         (".//a[@class='reference internal'][@href='#cmdoption-perl-arg-+p']/code/span",
             '\+p'),
+        (".//a[@class='reference internal'][@href='#cmdoption-perl--plugin.option']/code/span",
+            '--plugin.option'),
+        (".//a[@class='reference internal'][@href='#cmdoption-perl-arg-create-auth-token']/code/span",
+            'create-auth-token'),
         (".//a[@class='reference internal'][@href='#cmdoption-perl-arg-arg']/code/span",
             'arg'),
         (".//a[@class='reference internal'][@href='#cmdoption-hg-arg-commit']/code/span",
